# fintrace

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: agent_evidence.example.json  demo_ai_infra_feed.xml  demo_risk_feed.xml  nvda_ai_demand.graph.html  nvda_ai_demand.report.md  nvda_ai_demand.signal.json  nvda_update.txt  sources.example.json
schemas/: agent_evidence.schema.json
skills/fintrace/: SKILL.md
skills/fintrace/agents/: openai.yaml
skills/fintrace/references/: adversarial-checklist.md  agent-evidence-contract.md
src/fintrace/: __init__.py  agent_import.py  brief.py  cli.py  discovery.py  extractor.py  ledger.py  schema.py  source_ingest.py  source_packs.py
tests/: test_agent_import.py  test_brief.py  test_contracts.py  test_discovery.py  test_extractor.py  test_ledger.py  test_source_ingest.py  test_source_packs.py
