[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fintrace"
version = "0.7.0"
description = "Auditable signal cards and evidence ledgers for financial research agents."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "FinTrace Contributors" }
]
keywords = ["finance", "ai-agents", "research", "evidence", "signals", "mcp", "codex-skills"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Office/Business :: Financial :: Investment",
]

[project.scripts]
fintrace = "fintrace.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fintrace"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
